--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
   "dependencies": {
     "@radix-ui/react-slot": "^1.2.4",
     "@react-three/fiber": "^9.4.0",
-    "@supabase/supabase-js": "^2.86.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.555.0",
@@ -19,7 +18,8 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "tailwind-merge": "^3.4.0",
-    "three": "^0.181.2"
+    "three": "^0.181.2",
+    "partysocket": "1.1.6"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
@@ -31,6 +31,7 @@
     "shadcn": "^3.5.1",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0",
-    "typescript": "^5"
+    "typescript": "^5",
+    "partykit": "0.0.115"
   }
 }
